2006-02-21  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter_parser.c:  Add new "gtk-theme" property
          to <greeter> tag theme xml format, so the theme can specify a
	  GtkTheme to be used for gdmgreeter.  This allows theming of
	  the "Options" menu and the entry field, and any other GTK+
	  widgets used by gdmgreeter.  This also makes it possible to
	  create a11y themes (HighContrast, LowContrast, etc.) themes
	  for gdmgreeter.

2006-02-16  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter.c, gui/greeter/greeter_item_ulist.c: Fix
	  face browser so it works better.  Sometimes we get PROMPT calls
	  for displaying username so we want to enable the face browser
	  in this case.  We only want to disable it when the cancel 
	  button is pressed (until the next time the daemon prompts us
	  for username/password entry).  Also fix "theme broken" message
	  so it doesn't display the message when the pam-message label is
	  in the theme.

2006-02-16  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdmconfig.c, daemon/gdm-net.c, gui/gdmsetup.c:
	  Fix some GCC C-99 compile issues.  Fixes bug #331450.
	  Patch provided by Jens Granseur.

2006-02-15  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmconfig.c: Fixes to make config work better.

2006-02-15  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmconfig.c: Use g_hash_table_replace instead of freeing
	  the string value in the hash.  This corrects a core dumping
	  problem with gdmsetup.
	* gui/gdmsetup.c: Fix issue with gdmsetup freeing theme_dir
	  when it shouldn't.  Patch provided by Matthias Clasen.
	  <Matthias.Clasen@poet.de>.
	* config/Xsession.in: Back out launching of dbus-launch after
	  discussion that is really most appropriate for this to be
	  launched by init.d scripting.

2006-02-15  Brian Cameron  <brian.cameron@sun.com>

	* Makefile.am, gui/Makefile.am, gui/greeter/Makefile.am, 
	  utils/gdm-dmx-reconnect-proxy.c: Reorganize libraries so that