@@ -1,3 +1,7 @@
+2006-02-24  Brian Cameron  <brian.cameron@sun.com>
+
+	* gui/gdmconfig.c, gui/gdmsetup.c: Clean up memory handling.
+	
 2006-02-21  Brian Cameron  <brian.cameron@sun.com>
 
 	* gui/greeter/greeter_parser.c:  Add new "gtk-theme" property
